kustomize/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: holidays-api-prod
  labels:
    name: production
