kustomize/prod/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: holidays-api-backend
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: holidays-api
      type: backend
  template:
    metadata:
      labels:
        app: holidays-api
        type: backend
    spec:
      volumes:
        - name: cache-volume
          emptyDir: {}
      containers:
        - name: backend
          image: 611630892743.dkr.ecr.ap-northeast-1.amazonaws.com/holidays-api-backend:main-102 # {"$imagepolicy": "flux-system:holidays-api-backend-prod"}
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /home/dockeruser/project/tmp
              name: cache-volume
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              memory: 384Mi
            requests:
              cpu: 10m
              memory: 384Mi
