kustomize/prod/service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: holidays-api-backend
  namespace: holidays-api-prod
spec:
  type: ClusterIP
  selector:
    app: holidays-api
    type: backend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
