kustomize/prod/service_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: holidays-api-frontend
  namespace: holidays-api-prod
spec:
  type: ClusterIP
  selector:
    app: holidays-api
    type: frontend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
